plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/datePlusDate.xpath2
xs:date($i) + <error descr="Expected type 'xs:duration', got 'xs:date?'">xs:date($j)</error>